@@ -3,6 +3,9 @@
 
   03 Jan 2007; Roy Marples <uberlord@gentoo.org>:
 
+    Save last used consolefont in /lib/rcscripts/console and apply
+    in init.sh, #156604.
+
     Update ESSID/MAC wireless documentation, #159807 thanks to Michael Conrad.
 
   03 Jan 2007; Mike Frysinger <vapier@gentoo.org>:
